web commit by PatrickWinnertz

--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -47,6 +47,10 @@ So I think I'm inside my own timetable. :)
 ps: Since I found nothere the possibility to upload an file, here is an link to my page where you can have a look. Comments are very welcome ;-)
 https://www.der-winnie.de/~winnie/gsoc07/tex.pm
 
+You'll find an demo site here:
+https://www.der-winnie.de/wiki/opensource/gsoc2007/
+I'll add some more complex formulas over the days. But this is basically only pure latex. ;-)
+
 -- Patrick Winnertz
 
 ----
