--- a/doc/soc.mdwn
+++ b/doc/soc.mdwn
@@ -7,7 +7,8 @@ We started with a list of [[ideas]]. Our [[application]] was accepted, and
 the following projects will be worked on:
 
 * latex plugin input/output for ikiwiki  
-  by Patrick Winnertz
+  by [[PatrickWinnertz]] 
+  (See [[todo/latex]])
 * Implement File Upload Functionality and Image Gallery Creation  
   by Ben Coffey  
   (See [[todo/fileupload/soc-proposal]])
