--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.4) UNRELEASED; urgency=low
+ikiwiki (2.4) unstable; urgency=low
 
   * Make the toc plugin use html-compatible anchors. This is necessary since
     most web sites serve ikiwiki xhtml files as text/html and mozilla browsers
@@ -14,7 +14,7 @@ ikiwiki (2.4) UNRELEASED; urgency=low
   * In img tag, allow link=no to disable link to full size image. Thanks,
     Nis Martensen. Closes: #433188
 
- -- Joey Hess <joeyh@debian.org>  Sun, 15 Jul 2007 14:59:23 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 15 Jul 2007 15:02:43 -0400
 
 ikiwiki (2.3) unstable; urgency=low
 
