--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -147,4 +147,9 @@ Okay what do you think of this procedure?
 
 ----
 
+It would be nice if it would output image tags with style="height:1em;" so that the formulas scale
+with the rest of the text if you change the font size in your browser (ctrl + +/-).
+
+-----
+
 [[tag soc]]
