web commit by PatrickWinnertz: fixed whishlist bug of enodev

--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -147,9 +147,10 @@ Okay what do you think of this procedure?
 
 ----
 
-It would be nice if it would output image tags with style="height:1em;" so that the formulas scale
-with the rest of the text if you change the font size in your browser (ctrl + +/-).
+> It would be nice if it would output image tags with style="height:1em;" so that the formulas scale
+> with the rest of the text if you change the font size in your browser (ctrl + +/-).
 
+Thanks for the comment... is fixed.
 -----
 
 [[tag soc]]
