--- a/doc/patchqueue/FormBuilder__95__Template__95__patch.mdwn
+++ b/doc/patchqueue/FormBuilder__95__Template__95__patch.mdwn
@@ -3,3 +3,6 @@ This patch allows you to use the pagetemplate hooks with FormBuilder.
 It can be downloaded from <http://ikiwiki.xbaud.com/FormBuilder_Templates_patch.tar.gz>
 
 --[[TaylorKillian]]
+
+I think I've fixed this in a different way. Please let me know if the fix
+somehow doesn't work well enough. --[[Joey]]
