--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -178,16 +178,7 @@ My best regards,
 
 --[[Paweł|ptecza]]
 
-> This is not new behavior in 2.2 as far as I know. Ikiwiki was always 
-> interpreted "[ [foo bar] ]" as a preprocessor directive, with the
-> whitespace after the first word being the significant bit that
-> distinguishes it from a wikilink. If you want whitespace in a wikilink,
-> you use underscores; there's been a note at the end of [[WikiLink]] about
-> that for some time. --[[Joey]]
-
->> Hm. Probably you're right, but my WikiLinks with spaces work for me
->> with ikiwiki <= 2.0 and don't work with ikiwiki 2.2. What's the explanation?
->> --[[Paweł|ptecza]]
+> See [[bugs/Spaces_in_link_text_for_ikiwiki_links]]
 
 ----
 
