--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ ikiwiki (2.5) UNRELEASED; urgency=low
   * Wrap the editpage template in the standard misctemplate, this allows the
     pagetemplate hook to work for that page.
   * Above change fixes the favicon plugin to work on edit pages.
+  * Correct some issues with escaped preprocessor directives.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 16 Jul 2007 01:11:03 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 20 Jul 2007 13:54:02 -0400
 
 ikiwiki (2.4) unstable; urgency=low
 
