web commit by http://adam.shand.net/

--- a/doc/todo/abbreviation.mdwn
+++ b/doc/todo/abbreviation.mdwn
@@ -1,1 +1,3 @@
 We might want some kind of abbreviation and acronym plugin. --[[JoshTriplett]]
+
+ * Not sure if this is what you mean, but I'd love a way to make works which match existing page names automatically like (eg. if there is a page called "MySQL" then any time the word MySQL is mentioned it should become a link to that page).  -- [[AdamShand]]
