web commit by http://arnested.dk/

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -11,6 +11,8 @@ Testing right-to-left text: (שרה) should be spelled shin (ש) resh (ר) heh (
 
 Testing it in a comment...
 
+Tester.
+
 Here's a paragraph.
 
 Here's another one with *emphasised* text.
