web commit by NicolasLimare

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -111,3 +111,10 @@ http://www.jkg.in/openid/anonymous --~~~~
 test again without comment
 
 test again with comment
+
+
+stats???
+
+[[pagestats ]]
+
+[[pagestats style="table"]]
