web commit by NicolasLimare

--- a/doc/bugs/Buggy_dependency_graph.mdwn
+++ b/doc/bugs/Buggy_dependency_graph.mdwn
@@ -34,3 +34,5 @@ I observed these problems (same *kind*, I didn't check in details) on
 * ikiwiki 2.3 + v5.8.8 + Ubuntu 7.04
 
 I can think about stripping down my wiki source and making it available online for analysis.
+
+-- NicolasLimare
