web commit by NicolasLimare

--- a/doc/bugs/Buggy_dependency_graph.mdwn
+++ b/doc/bugs/Buggy_dependency_graph.mdwn
@@ -5,11 +5,11 @@ ikiwiki generated for [my site](http://poivron.org/~nil/misc/ikiwiki_buggy_index
 
 Some **HUGE** dependencies appear, clearly non optimal, like
 
-    depends = A｜ B | A | C | A | D | A | E | A | F | A | G | 
+    depends = A｜ B | A | C | A | D | A | E | A | F | A | G | ....
 
 or 
 
-    depends= A | B | C | D | A | B | C | D | A | B | C | D |
+    depends= A | B | C | D | A | B | C | D | A | B | C | D | ....
 
 Couldn't isolate the cause, but some sources for this problem may be:
 
