--- a/doc/bugs/Post-compilation_inclusion_of_the_sidebar.mdwn
+++ b/doc/bugs/Post-compilation_inclusion_of_the_sidebar.mdwn
@@ -16,3 +16,9 @@ shtml output with open cgi web access is a potential security hole and can DoS t
 single-editor site.
 
 NicolasLimare
+
+> This is a good idea, though sadly not portable enough to be the default.
+> Especially if the only way to do it is with .shtml.
+> But I really like the idea of not rebuilding the sidebar all the time. 
+> Definitly a TODO, for me, if I can figure out how to do it. Patches
+> eagerly accepted. --[[Joey]]
