* Make the map plugin notice when pages in the map are deleted and update   it.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ ikiwiki (2.5) UNRELEASED; urgency=low
     pagetemplate hook to work for that page.
   * Above change fixes the favicon plugin to work on edit pages.
   * Correct some issues with escaped preprocessor directives.
+  * Make the map plugin notice when pages in the map are deleted and update
+    it.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 20 Jul 2007 13:54:02 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 24 Jul 2007 20:58:19 -0400
 
 ikiwiki (2.4) unstable; urgency=low
 
