* Add a htmlext config option, this can be used to make ikiwiki generate   html files with a different extension.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,10 @@ ikiwiki (2.5) UNRELEASED; urgency=low
   * Correct some issues with escaped preprocessor directives.
   * Make the map plugin notice when pages in the map are deleted and update
     it.
+  * Add a htmlext config option, this can be used to make ikiwiki generate
+    html files with a different extension.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 24 Jul 2007 20:58:19 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 24 Jul 2007 21:11:30 -0400
 
 ikiwiki (2.4) unstable; urgency=low
 
