--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -245,6 +245,10 @@ configuration options of their own.
   subdirectory of the wiki. The default is to link to pages in the toplevel
   directory of the wiki.
 
+* --htmlext html
+
+  Configures the extension used for generated html files. Default is "html".
+
 * --timeformat format
 
   Specify how to display the time or date. The format string is passed to the
