move some bugs to todo items
add a wishlist tag, that can be used to separate some todos off onto a
wishlist page

--- a/doc/bugs/format_bug.mdwn
+++ b/doc/bugs/format_bug.mdwn
@@ -21,3 +21,5 @@ encouraging.
 > do that, use the form to generate a new per-bug page..)
 
 > --[[Joey]]
+
+Marking this [[done]] since it's not a ikiwiki bug directly.
