--- a/doc/todo/Buggy_dependency_graph.mdwn
+++ b/doc/todo/Buggy_dependency_graph.mdwn
@@ -78,3 +78,5 @@ I can think about reducung the size of my wiki source and making it available on
 > We'd have to see the code to the simplifier to know.
 > 
 > --[[Joey]]
+
+[[tag wishlist]]
