--- a/doc/todo/Post-compilation_inclusion_of_the_sidebar.mdwn
+++ b/doc/todo/Post-compilation_inclusion_of_the_sidebar.mdwn
@@ -21,4 +21,10 @@ NicolasLimare
 > Especially if the only way to do it is with .shtml.
 > But I really like the idea of not rebuilding the sidebar all the time. 
 > Definitly a TODO, for me, if I can figure out how to do it. Patches
-> eagerly accepted. --[[Joey]]
+> eagerly accepted. 
+> 
+> I have implemented a htmlext configuration item, that lets you control
+> what extension ikiwiki uses for output html pages. So in theory, a
+> sidebar could be done as you describe using .shtml. --[[Joey]]
+
+[[wishlist]]
