Close this one, I think I've explained fairly convincingly why the old behavior was a bug, and the current behavior good sense.

--- a/doc/bugs/Spaces_in_link_text_for_ikiwiki_links.mdwn
+++ b/doc/bugs/Spaces_in_link_text_for_ikiwiki_links.mdwn
@@ -34,3 +34,5 @@ reported in [[index/discussion#index11h1]].
 > I have to support old behavior that was never documented and happened due
 > to a bug, so I current have no plans to bring the old behavior back.
 > --[[Joey]]
+
+[[done]]
